# Fitness-Estimation_Jerry

./: .gitignore
Fitness-Estimation/: .gitignore  README.md  batch_config.py  batch_run.py  check_missing_runs.py  compare_models.py  main.py  model_selection.py  pmcmc_inference.py  pyproject.toml  rename_mc_figs.py
Fitness-Estimation/samplers/: helpers.py
Fitness-Estimation/utils/: __init__.py  genetic_entities.py  genetic_structures.py  index_core.py  modifiers.py  population_state.py
Fitness-Estimation_by_Jerry/: TODO.md  json_demo.py  new_population_state.py  pmcmc_inference_multi.py  quick_model_comparison.py
Fitness-Estimation_by_Jerry/samplers/: README.md  pmcmc.py
Fitness-Estimation_by_Jerry/utils/: algorithms.py  base_population.py  nonWF_population.py  numba_utils.py  simulation_kernels.py  tools.py
Fitness-Estimation_by_Jerry/webui/: app.py
canvas/: compare_models_heatmap.r  output2_canvas_bar-chart.r  output2_canvas_heat-chart.r
configs/: numba_config.py
rough_maximum_likelihood/Rmd_version/: ml_overl.R  ml_overl.Rmd
rough_maximum_likelihood/python_version/: ml_overl.py
samplers/: __init__.py  observation.py  pmcmc.py
utils/: helpers.py  nonWF_population.py  population_static.py  simulation_kernels.py  type_def.py
web_ui/: app.py
web_ui/templates/: index.html
