[project]
name = "fitness-estimation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "numba>=0.62.1",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "pyabc>=0.12.16",
    "pytest>=9.0.1",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]
